# dwgthumb

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  dwg.thumbnailer  dwgthumb.c  dwgthumbnailer
